chore: apply evidence-based artifact-quality audit cleanup
Unify AssetColorAssigner colors and activity-log markers on the
generated :common catalogs, de-mirror contract-test assertions from
shared catalogs per AGENTS.md §7, replace coverage-padding tests with
real contract tests (OrderResult fields, TradeRecord provenance,
PortfolioSnapshot aggregates, isPairAliasDuplicateOf guards), give
PortfolioManagerLoopTest an explicit loop-survival assertion, fix
README accuracy drift (commit count, JVM flags, narrative trim),
rewrite the Copilot harness stub without @ imports, quote the
markdownlint globs in gradle-quality-gates, ignore /engine/bin/,
and remove the unused sqlite MCP block from .kilo/kilo.json.